feat: implement Stripe donations with subscription management

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 
 # Ignore Kamal secrets (contain sensitive credentials)
 /.kamal/secrets-common
+/.kamal/secrets.production
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
