--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -35,6 +35,10 @@ retain_containers: 2
 env:
   secret:
     - RAILS_MASTER_KEY
+    - POSTMARK_API_TOKEN
+    - STRIPE_SECRET_KEY
+    - STRIPE_PUBLISHABLE_KEY
+    - STRIPE_WEBHOOK_SECRET
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
