--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -36,6 +36,8 @@ env:
   secret:
     - RAILS_MASTER_KEY
     - POSTMARK_API_TOKEN
+    - POSTMARK_WEBHOOK_USERNAME
+    - POSTMARK_WEBHOOK_PASSWORD
     - STRIPE_SECRET_KEY
     - STRIPE_PUBLISHABLE_KEY
     - STRIPE_WEBHOOK_SECRET
