--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -41,6 +41,10 @@ env:
     - STRIPE_SECRET_KEY
     - STRIPE_PUBLISHABLE_KEY
     - STRIPE_WEBHOOK_SECRET
+    - TELNYX_API_KEY
+    - TELNYX_MESSAGING_PROFILE_ID
+    - TELNYX_PHONE_NUMBER
+
   clear:
     # Set the host for URL generation (staging environment)
     APP_HOST: staging.churchneeds.net
