--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,7 +21,7 @@ proxy:
   healthcheck:
     path: /up
     interval: 10
-    timeout: 20
+    timeout: 30
 
 registry:
   server: registry.digitalocean.com
@@ -51,7 +51,7 @@ env:
 
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
-    SOLID_QUEUE_IN_PUMA: true
+    SOLID_QUEUE_IN_PUMA: "true"
     PORT: 3000
 
     # Optimize for low traffic (max 2 concurrent users)
