--- a/config/solid_queue.yml
+++ b/config/solid_queue.yml
@@ -1,12 +1,12 @@
 production:
   dispatchers:
-    - polling_interval: 2
+    - polling_interval: <%= ENV.fetch("SOLID_QUEUE_POLL_INTERVAL", 2) %>
       batch_size: 50
       concurrency_maintenance_interval: 600
   workers:
     - queues: "*"
-      threads: <%= ENV.fetch("SOLID_QUEUE_CONCURRENCY", 2) %>
-      processes: <%= ENV.fetch("SOLID_QUEUE_PROCESSES", 2) %>
+      threads: <%= ENV.fetch("SOLID_QUEUE_CONCURRENCY", 1) %>
+      processes: <%= ENV.fetch("SOLID_QUEUE_PROCESSES", 1) %>
       polling_interval: <%= ENV.fetch("SOLID_QUEUE_POLL_INTERVAL", 2) %>
 
 development:
